cabal-version:      3.0
name:               gig-guide
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alex Ringeri
maintainer:         ac.ringeri@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library
    exposed-modules:
        GigGuide.Types,
        GigGuide.Types.EventOverview,
        GigGuide.Types.EventDetails,
        GigGuide.Types.Venue,
        GigGuide.Types.VenueAndGeo,
        GigGuide.Types.Geo,
        GigGuide.Types.GeoJSON,
        GigGuide.Types.Range,
        GigGuide.Scraper.BeatScraper,
        GigGuide.Scraper.Common,
        GigGuide.Scraper.Beat.Internal

    -- Modules included in this library but not exported.
    other-modules:
        GigGuide.Scraper.Beat.Venue,
        GigGuide.Scraper.Beat.EventOverview,
        GigGuide.Scraper.Beat.EventDetails,
        Text.HTML.Scalpel.Class

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.18
                    , wreq
                    , mtl
                    , time
                    , text
                    , scalpel
                    , lens
                    , lens-aeson
                    , aeson
                    , bytestring
                    , tagsoup
                    , monad-logger
    hs-source-dirs:   lib
    default-language: Haskell2010
    ghc-options: -Wall

executable scrape-venues
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18,
        gig-guide,
        aeson,
        optparse-applicative

    hs-source-dirs:   executables/scrape-venues
    default-language: Haskell2010
    ghc-options: -Wall

executable geocode-venues
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        GigGuide.Geocode.Nominatim

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18,
        gig-guide,
        bytestring,
        text,
        mtl,
        wreq,
        aeson,
        lens,
        lens-aeson,
        optparse-applicative

    hs-source-dirs:   executables/geocode-venues
    default-language: Haskell2010
    ghc-options: -Wall

executable merge-overrides
    main-is:          Main.hs
    other-modules: GigGuide.Types.Override

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18,
        gig-guide,
        bytestring,
        text,
        mtl,
        aeson,
        lens,
        lens-aeson,
        optparse-applicative,
        containers,
        monad-logger

    hs-source-dirs:   executables/merge-overrides
    default-language: Haskell2010
    ghc-options: -Wall

executable scrape-events
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.18,
        gig-guide,
        bytestring,
        text,
        mtl,
        transformers,
        wreq,
        aeson,
        lens,
        lens-aeson,
        optparse-applicative,
        time,
        scalpel,
        containers,
        multi-containers,
        monad-logger

    hs-source-dirs:   executables/scrape-events
    default-language: Haskell2010
    ghc-options: -Wall

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  build-depends:
      base ^>=4.18
    , hspec ^>= 2.11.7
    , text
    , gig-guide
    , time
    , scalpel
    , monad-logger
    , mtl
    , transformers,
  other-modules: GigGuide.BeatSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*