cabal-version:       >=1.10

name:                beat-web-stub
version:             0.1.0.0
author:              aringeri
maintainer:          aringeri@github.com
build-type:          Simple


executable beat-web-stub
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , wai
                     , warp
                     , http-types
  hs-source-dirs:      src
  default-language:    Haskell2010
